tests/paczka2/big_fuzzy/82215143.err
Error in line 1: A148 A148 97,1
Error in line 3: VWB2GZdG Sb04 2b,7
Error in line 5: xSWqfSOT5X8 S194 0,5
Error in line 2: A148 S194 22,2
Error in line 11: A148 A148 59,6
Error in line 14: A148 S904 44,7
Error in line 4: VWB2GZdG S904 31,2
Error in line 15: A148 S918 84,9
Error in line 17: A148 S194 97,6
Error in line 27: xSWqfSOT5X8 S918 83,0
Error in line 22: 3X37ssqVqGr S918 59,0
Error in line 37: 26kKwVEIFuO S904 65,1
Error in line 52: 3X37ssqVqGr S904 51,8
Error in line 54: 26kKwVEIFuO A148 43,1
Error in line 53: 3X37ssqVqGr S194 27,4
Error in line 55: 26kKwVEIFuO S918 63,6
Error in line 62: xSWqfSOT5X8 A148 6,2
Error in line 95: Uz919T S91g 165,3
Error in line 100: VWB2GZdG S918 42,6
Error in line 105: A148 S904 54,1
Error in line 106: Wip7 A148 81,0
Error in line 108: A148 S194 16,4
Error in line 110: Wip7 S194 15,3
Error in line 97: xSWqfSOT5X8 S918 77,9
Error in line 123: xSWqfSOT5X8 A148 46,0
Error in line 133: 3X37ssqVqGr A148 223,6
Error in line 135: 3X37ssqVqGr S904 54,1
Error in line 134: xSWqfSOT5X8 S194 13,0
Error in line 148: xSWqfSOT5X8 A148 47,6
Error in line 152: xSWqfSOT5X8 S918 51,3
Error in line 183: VWB2GZdG A148 19,2
Error in line 185: Wip7 S904 51,3
Error in line 184: VWB2GZdG S918 81,4
Error in line 181: Uz919T S918 205,6
Error in line 182: xSWqfSOT5X8 S904 36,3
Error in line 203: Uz919T S904 608,3
Error in line 209: Uz919T A148 50,1
Error in line 219: VWB2GZdG S918 94,78
Error in line 212: Uz919T S194 64,1
Error in line 222: A148 S194 33,4
Error in line 241: xSWqfSOT5X8 S194 15,9
Error in line 243: 26kKwVEIFuO S904 -3,7
Error in line 240: 26kKwVEIFuO S904 77,7
